<resources>
    <string name="app_name">Dwarf Sleepy</string>
    <string name="null_description">null</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dwarf_sleepy">Dwarf Sleepy</string>
    <string name="night_monitoring">NIGHT MONITORING</string>
    <string name="day_monitoring">DAY MONITORING</string>
    <string name="polar_belt">POLAR BELT</string>
    <string name="accelerometer">ACCELEROMETER</string>
    <string name="refresh">REFRESH</string>
    <string name="please_enter_the_email_address_registered_on_your_account">Please enter the email address registered on your account</string>
    <string name="email_address_hint">email address</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="calories_calculator">Calories Calculator</string>
    <string name="kcal">kcal</string>
    <string name="calculate">Calculate</string>
    <string name="logout">LOGOUT</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="physical_activities_text">Physical Activities</string>
    <string name="day_monitoring_text">Day Monitoring</string>
    <string name="abnormal_hr_text">Abnormal Heart Rate Data</string>
    <string name="abnormal_accelerometer_text">Abnormal Accelerometer Data</string>
    <string name="google_sign_in_is_required_to_use_physical_activity_detection">* Google Sign In is required to use physical activity detection.</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="heart_rate">RR X 100</string>
</resources>
