<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/bgImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/null_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/name"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/birthdayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorWhite"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/birthday"
        android:inputType="date"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthdayEditText"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/maleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/colorWhite"
            android:buttonTint="@color/colorYellow"
            android:text="@string/male"
            android:textColor="@color/colorWhite" />

        <RadioButton
            android:id="@+id/femaleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorYellow"
            android:text="@string/female"
            android:textColor="@color/colorWhite" />
    </RadioGroup>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorYellow"
        android:text="@string/create_account"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite" />

</RelativeLayout>
