<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/bgImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg"
        android:scaleType="fitXY"
        android:contentDescription="@string/null_description" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorWhite"
        android:hint="@string/name"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/birthdayEditText"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorWhite"
        android:hint="@string/birthday"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:maxLines="1"
        android:inputType="date"
        android:focusable="true" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthdayEditText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorWhite"
        android:hint="@string/password"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:maxLines="1"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/passwordEditText"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorYellow"
        android:text="@string/create_account"/>

</RelativeLayout>
