<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/bgImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg"
        android:scaleType="fitXY"
        android:contentDescription="@string/null_description" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/null_description" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorWhite"
        android:hint="@string/password"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:maxLines="1"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/passwordEditText"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/login"
        android:textColor="@color/colorBleumarin"
        android:textAllCaps="true"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/forgotPasswordBtton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/google_sign_in_button"
        android:text="@string/forgot_your_password"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/forgotPasswordBtton"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorYellow"
        android:text="@string/create_account"/>

</RelativeLayout>
